crates/ferrum-interfaces/tests/ui/vnext/fail/execution_event_is_not_deserialize.rs
use ferrum_interfaces::vnext::ExecutionEvent;

fn main() {
    let _: ExecutionEvent = serde_json::from_str("{}").unwrap();
}
